--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,6 @@
 		"activeTab",
 		"tabs",
 		"*://*/*"
-	]
+	],
+	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
