--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,17 @@
     },
     "manifest_version": 2,
     "devtools_page": "index.html",
+    "background": {
+        "scripts": [ "background.js" ]
+    },
+    "content_scripts": [ {
+        "all_frames": true,
+        "js": [ "canjs-devtools-content-script.js" ],
+        "matches": [ "*://*/*" ]
+    } ],    
+    "web_accessible_resources": [   
+        "canjs-devtools-injected-script.js"    
+    ],
     "permissions": [],
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
