--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "manifest_version": 2,
     "devtools_page": "index.html",
     "background": {
-        "scripts": [ "background.js" ]
+        "scripts": [ "canjs-devtools-background.js" ]
     },
     "content_scripts": [ {
         "all_frames": true,
