--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "can": "^6.2.3",
+    "can-define": "^2.8.0",
     "chai": "^4.2.0",
     "eslint": "^6.5.1",
     "steal": "^2.1.10",
