Add necessary dep upgrades to can and can-devtools-components

--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
   },
   "homepage": "https://canjs.com",
   "dependencies": {
-    "can-devtools-components": "^0.11.10-0"
+    "can-devtools-components": "^0.11.10"
   },
   "devDependencies": {
-    "can": "^6.2.3",
+    "can": "^6.2.7",
     "can-define": "^2.8.0",
     "chai": "^4.2.0",
     "eslint": "^6.5.1",
