--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
   },
   "content_scripts": [
     {
+      "all_frames": true,
       "matches": ["<all_urls>"],
       "js": ["canjs-devtools-content-script.js"],
       "run_at": "document_idle"
